--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "biblioteca",
+  "name": "node_biblioteca",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch app.js"
+    "dev": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/estebanrp/biblioteca.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/estebanrp/biblioteca/issues"
+  },
+  "homepage": "https://github.com/estebanrp/biblioteca#readme",
+  "description": "",
+  "devDependencies": {
+    "electron": "^35.1.2",
+    "standard": "^17.1.2"
+  },
+  "eslintConfig": {
+    "extends": "standard"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-session": "^1.18.0",
-    "helmet": "^7.0.0",
-    "mysql2": "^3.10.2",
-    "pug": "^3.0.2"
+    "better-sqlite3": "^11.9.1",
+    "sqlite3": "^5.1.7"
   }
 }
